# triage

./: .dockerignore  .env.example  .gitignore  AI_WORKFLOW.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: build-plan.md  design.md  requirements.md
eval/: golden_set.yaml  run_eval.py
src/triage/: __init__.py  evaluation.py  main.py
src/triage/conversations/: __init__.py  dependencies.py
src/triage/conversations/api/: __init__.py
src/triage/conversations/decision/: __init__.py  completeness.py  reconcile.py  rules.py
src/triage/conversations/models/: __init__.py  enums.py  schemas.py  state.py
src/triage/conversations/orchestration/: __init__.py  graph.py  merge.py
src/triage/core/: __init__.py  config.py  database.py  dependencies.py  error_codes.py  errors.py  logging.py  pubsub.py  redis.py
src/triage/providers/: __init__.py  factory.py
src/triage/worker/: __init__.py  arq_app.py  submitter.py
tests/: test_config.py  test_eval.py
tests/api/: test_auth.py  test_conversations_api.py  test_health.py  test_voice.py
tests/integration/: test_enrichment_flow.py  test_graph.py  test_multi_turn.py  test_postgres.py  test_pubsub.py  test_redis_primitives.py  test_worker.py
tests/unit/: test_completeness.py  test_conversation_service.py  test_customer_repository.py  test_degradation.py  test_enrichment.py  test_enums.py  test_factory.py  test_heuristic.py  test_logging.py  test_merge.py  test_providers.py  test_reconcile.py  test_repositories.py  test_resilient.py  test_rules.py  test_schemas.py
(+43 files in other folders)
